test/Fail/Issue7495b.err
Issue7495b.agda:3.1-5.17: error: [TerminationIssue]
Termination checking failed for the following functions:
  bad
Problematic calls:
  bad true
    (at Issue7495b.agda:4.12-15)
